variables.Variables.scala.error
Compilation error:
Variables:4: error: reassignment to val
  stepDone = stepDone + 1 ;
           ^Variables:9: error: reassignment to val
  stepDone = stepDone - 1;
           ^